--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "chart.js": "^4.4.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "dotenv": "^16.4.5",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -46,10 +44,13 @@
     "winston-logstash-transport": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.26.8",
     "@babel/preset-react": "^7.23.3",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.2.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next-router-mock": "^0.9.10"
