--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-macros": "^3.1.0",
     "chart.js": "^4.4.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
@@ -40,6 +41,7 @@
     "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "sharp": "^0.33.4",
     "swr": "^2.2.2",
