--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Frontend CI
+name: Frontend CI/CD
 
 on:
   push:
@@ -19,10 +19,12 @@ jobs:
           node-version: '18'
 
       - name: Install Dependencies
+        working-directory: ./
         run: npm install
 
-      - name: Run Tests (Test #1)
-        run: npm test  # Jest tests
+      - name: Run Frontend Tests
+        working-directory: ./
+        run: npm test
 
   build:
     runs-on: ubuntu-latest
@@ -37,13 +39,11 @@ jobs:
           node-version: '18'
 
       - name: Build Frontend
+        working-directory: ./
         run: |
           npm install
           npm run build
 
-      # Optional: Build Docker image (but docker-compose.yml isn’t here)
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
+      # Optional: Build Frontend Docker Image
       - name: Build Docker Image
         run: docker build -t app_presente_front .
