--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --hostname 0.0.0.0",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start --hostname 0.0.0.0",
     "lint": "next lint",
     "test": "jest",
