Bow down to 'master': 'main' is no more, and workflow_dispatch got sacrificed to the CI gods

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,9 @@ name: Frontend CI/CD
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
-  workflow_dispatch:
+    branches: [master]
 
 jobs:
   test:
