--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,7 @@ jobs:
           echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
           docker build -t $DOCKERHUB_USERNAME/app_presente_front:staging .
           docker push $DOCKERHUB_USERNAME/app_presente_front:staging
+          echo "Pushed $DOCKERHUB_USERNAME/app_presente_front:staging"
       - name: Deploy to Staging EC2
         env:
           EC2_HOST: ${{ secrets.STAGING_EC2_HOST }}
@@ -91,9 +92,11 @@ jobs:
           echo "$EC2_SSH_KEY" > ssh_key.pem
           chmod 400 ssh_key.pem
           ssh -i ssh_key.pem -o StrictHostKeyChecking=no ec2-user@$EC2_HOST << 'EOF'
-            docker pull $DOCKERHUB_USERNAME/app_presente_front:staging
+            docker stop app_presente_frontend || true
+            docker rm app_presente_frontend || true
             docker stop app_presente_front_staging || true
             docker rm app_presente_front_staging || true
+            docker pull $DOCKERHUB_USERNAME/app_presente_front:staging
             docker run -d --name app_presente_front_staging -p 3000:3000 -e NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }} $DOCKERHUB_USERNAME/app_presente_front:staging
           EOF
 
@@ -120,6 +123,7 @@ jobs:
           echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
           docker build -t $DOCKERHUB_USERNAME/app_presente_front:production .
           docker push $DOCKERHUB_USERNAME/app_presente_front:production
+          echo "Pushed $DOCKERHUB_USERNAME/app_presente_front:production"
       - name: Deploy to Production EC2
         env:
           EC2_HOST: ${{ secrets.PRODUCTION_EC2_HOST }}
@@ -129,8 +133,8 @@ jobs:
           echo "$EC2_SSH_KEY" > ssh_key.pem
           chmod 400 ssh_key.pem
           ssh -i ssh_key.pem -o StrictHostKeyChecking=no ec2-user@$EC2_HOST << 'EOF'
-            docker pull $DOCKERHUB_USERNAME/app_presente_front:production
             docker stop app_presente_front_production || true
             docker rm app_presente_front_production || true
+            docker pull $DOCKERHUB_USERNAME/app_presente_front:production
             docker run -d --name app_presente_front_production -p 80:3000 -e NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }} $DOCKERHUB_USERNAME/app_presente_front:production
           EOF
