--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.24.0
         with:
           slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
-          channel-id: 'C12345678' # Replace with your channel ID
+          channel-id: 'YOUR_SLACK_CHANNEL_ID' # Replace with actual Slack channel ID
           text: "New release version built: ${{ github.sha }} for app_presente_front"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
@@ -80,22 +80,28 @@ jobs:
   deploy-stage:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/dev' && github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GOOGLE_CLOUD_KEYS }}
+          credentials_json: '${{ secrets.GOOGLE_CLOUD_KEYS }}'
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
-      - name: Configure GKE cluster
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+          gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
+          gcloud components update --quiet
+          which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
+      - name: Verify GKE authentication
         run: |
           gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
+          kubectl version --client
       - name: Deploy to stage
         run: |
-          kubectl -n stage-app-presente apply -f frontend-deployment.yaml -f frontend-service.yaml
+          kubectl -n stage-app-presente apply -f kubernetes/frontend-deployment.yaml -f kubernetes/frontend-service.yaml
       - name: Verify stage deployment
         run: |
           kubectl -n stage-app-presente rollout status deployment/app-presente-front --timeout=300s
@@ -103,22 +109,28 @@ jobs:
   deploy-production:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GOOGLE_CLOUD_KEYS }}
+          credentials_json: '${{ secrets.GOOGLE_CLOUD_KEYS }}'
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
-      - name: Configure GKE cluster
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+          gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
+          gcloud components update --quiet
+          which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
+      - name: Verify GKE authentication
         run: |
           gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
+          kubectl version --client
       - name: Deploy to production
         run: |
-          kubectl -n production-app-presente apply -f production/frontend-deployment.yaml -f production/frontend-service.yaml
+          kubectl -n production-app-presente apply -f kubernetes/production/frontend-deployment.yaml -f kubernetes/production/frontend-service.yaml
       - name: Verify production deployment
         run: |
           kubectl -n production-app-presente rollout status deployment/app-presente-front --timeout=300s
