--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: app-presente-front
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: app-presente-front
@@ -21,8 +21,13 @@ spec:
         ports:
         - containerPort: 3000
         env:
-        - name: BACKEND_URL
-          value: "http://localhost:8000"
+        - name: NEXT_PUBLIC_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: app-presente-secrets
+              key: NEXT_PUBLIC_API_URL
+        - name: NEXT_PUBLIC_ENVIRONMENT_TEXT
+          value: "TESTE STAGE"
         readinessProbe:
           httpGet:
             path: /
@@ -34,7 +39,7 @@ spec:
             path: /
             port: 3000
           initialDelaySeconds: 15
-          periodSeconds: 10
+          periodSeconds: 20
         resources:
           limits:
             cpu: "500m"
