--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -15,9 +15,11 @@ spec:
       labels:
         app: app-presente-front
     spec:
+      terminationGracePeriodSeconds: 30
       containers:
       - name: app-presente-front
         image: guilherme310402/app_presente_front:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
         env:
@@ -32,14 +34,16 @@ spec:
           httpGet:
             path: /
             port: 3000
-          initialDelaySeconds: 5
+          initialDelaySeconds: 15
           periodSeconds: 10
+          failureThreshold: 3
         livenessProbe:
           httpGet:
             path: /
             port: 3000
-          initialDelaySeconds: 15
+          initialDelaySeconds: 30
           periodSeconds: 20
+          failureThreshold: 3
         resources:
           limits:
             cpu: "500m"
