--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -128,9 +128,21 @@ jobs:
         run: |
           gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
           kubectl version --client
+      - name: Check production namespace
+        run: |
+          kubectl get namespace production-app-presente || kubectl create namespace production-app-presente --dry-run=client -o yaml | kubectl apply -f -
       - name: Deploy to production
         run: |
-          kubectl -n production-app-presente apply -f production/frontend-deployment.yaml -f production/frontend-service.yaml
+          kubectl -n production-app-presente apply -f production/frontend-deployment.yaml -f production/frontend-service.yaml || { echo "Deployment failed"; exit 1; }
       - name: Verify production deployment
         run: |
-          kubectl -n production-app-presente rollout status deployment/app-presente-front --timeout=300s
+          kubectl -n production-app-presente rollout status deployment/app-presente-front --timeout=300s || { echo "Rollout failed"; exit 1; }
+      - name: Notify deployment result
+        if: always()
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
+          channel-id: 'YOUR_SLACK_CHANNEL_ID' # Replace with actual Slack channel ID
+          text: "Production deployment ${{ job.status }} for app_presente_front (commit: ${{ github.sha }})"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
