--- a/production/frontend-deployment.yaml
+++ b/production/frontend-deployment.yaml
@@ -47,6 +47,10 @@ spec:
         lifecycle:
           preStop:
             exec:
+            command:
+              - "/bin/sh"
+              - "-c"
+              - "sleep 5"
         resources:
           limits:
             cpu: "100m"
