--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -18,7 +18,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: app-presente-front
-        image: guilherme310402/app_presente_front:latest
+        image: guilherme310402/app_presente_front:v1.0.2
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
