Reduce resource requests for stage deployment

--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -52,6 +52,8 @@ spec:
           limits:
             cpu: "100m"
             memory: "128Mi"
+            ephemeral-storage: "500Mi"
           requests:
             cpu: "50m"
             memory: "64Mi"
+            ephemeral-storage: "250Mi"
