--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -95,16 +95,16 @@ jobs:
           gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
           gcloud components update --quiet
           which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
-      - name: Verify GKE authentication
+      - name: Configure kubectl
         run: |
           gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
-          kubectl version --client
       - name: Deploy to stage
         run: |
           kubectl -n stage-app-presente apply -f frontend-deployment.yaml -f frontend-service.yaml
-      - name: Verify stage deployment
-        run: |
-          kubectl -n stage-app-presente rollout status deployment/app-presente-front --timeout=300s
+          kubectl set image deployment/app-presente-front -n stage-app-presente app-presente-front=guilherme310402/app_presente_front:latest
+          kubectl patch deployment app-presente-front -n stage-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
+          kubectl rollout restart deployment/app-presente-front -n stage-app-presente
+          kubectl rollout status deployment/app-presente-front -n stage-app-presente --timeout=120s
 
   deploy-production:
     runs-on: ubuntu-latest
@@ -124,13 +124,13 @@ jobs:
           gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
           gcloud components update --quiet
           which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
-      - name: Verify GKE authentication
+      - name: Configure kubectl
         run: |
           gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
-          kubectl version --client
       - name: Deploy to production
         run: |
           kubectl -n production-app-presente apply -f production/frontend-deployment.yaml -f production/frontend-service.yaml
-      - name: Verify production deployment
-        run: |
-          kubectl -n production-app-presente rollout status deployment/app-presente-front --timeout=300s
+          kubectl set image deployment/app-presente-front -n production-app-presente app-presente-front=guilherme310402/app_presente_front:latest
+          kubectl patch deployment app-presente-front -n production-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
+          kubectl rollout restart deployment/app-presente-front -n production-app-presente
+          kubectl rollout status deployment/app-presente-front -n production-app-presente --timeout=120s
