--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,136 +1,78 @@
-name: Frontend CI/CD
+name: CI/CD para Frontend - App Presente
 
 on:
   push:
     branches:
       - dev
-      - main
-  pull_request:
-    branches:
-      - release/*
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
-      - name: Run linting
-        run: npm run lint
-      - name: Run tests
-        run: npm test
-      - name: Archive test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: |
-            **/test-results/**
-            **/*.xml
-
   build:
     runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'pull_request' && startsWith(github.ref, 'refs/heads/release/')
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
-      - name: Build frontend
-        env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-        run: npm run build
-      - name: Build and push Docker image
-        run: |
-          docker build -t guilherme310402/app_presente_front:latest .
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:latest
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Archive build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-output
-          path: |
-            .next/
-            out/
-      - name: Notify on release
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
-          channel-id: 'YOUR_SLACK_CHANNEL_ID' # Replace with actual Slack channel ID
-          text: "New release version built: ${{ github.sha }} for app_presente_front"
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
-  deploy-stage:
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v4
+
+      - name: Obter commit SHA
+        id: vars
+        run: echo "SHORT_SHA=$(git rev-parse --short=7 HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Login no Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
+      - name: Build e Push da imagem
+        run: |
+          docker build -t guilherme310402/app_presente_front:${{ steps.vars.outputs.SHORT_SHA }} .
+          docker push guilherme310402/app_presente_front:${{ steps.vars.outputs.SHORT_SHA }}
+
+  deploy:
+    needs: build
     runs-on: ubuntu-latest
-    needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Authenticate to Google Cloud
+        with:
+          fetch-depth: 0
+
+      - name: Get commit SHA
+        id: commit
+        run: echo "SHORT_SHA=$(git rev-parse --short=7 HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Autenticar no Google Cloud
+        id: 'auth'
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: '${{ secrets.GOOGLE_CLOUD_KEYS }}'
-      - name: Set up Google Cloud SDK
+          credentials_json: ${{ secrets.GOOGLE_CLOUD_KEYS }}
+          project_id: app-chamada-5706
+
+      - name: Instalar SDK do GCP e kubectl
         uses: google-github-actions/setup-gcloud@v2
-      - name: Install gke-gcloud-auth-plugin
+        with:
+          project_id: app-chamada-5706
+          install_components: 'kubectl'
+
+      - name: Instalar plugin de auth do GKE
         run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
-          gcloud components update --quiet
-          which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
-      - name: Configure kubectl
+          sudo curl -Lo /usr/local/bin/gke-gcloud-auth-plugin \
+            https://storage.googleapis.com/gke-release/gke-gcloud-auth-plugin/linux/amd64/gke-gcloud-auth-plugin
+          sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
+          echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
+
+      - name: Configurar acesso ao cluster GKE
         run: |
-          gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
-      - name: Deploy to stage
+          gcloud container clusters get-credentials devops-cluster \
+            --region us-central1 \
+            --project app-chamada-5706
+
+      - name: Deploy no Kubernetes
         run: |
-          kubectl -n stage-app-presente apply -f frontend-deployment.yaml -f frontend-service.yaml
-          kubectl set image deployment/app-presente-front -n stage-app-presente app-presente-front=guilherme310402/app_presente_front:latest
-          kubectl patch deployment app-presente-front -n stage-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
+          kubectl set image deployment/app-presente-front -n stage-app-presente \
+            app-presente-front=guilherme310402/app_presente_front:${{ steps.commit.outputs.SHORT_SHA }}
+          
+          kubectl patch deployment app-presente-front -n stage-app-presente \
+            -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
+
           kubectl rollout restart deployment/app-presente-front -n stage-app-presente
           kubectl rollout status deployment/app-presente-front -n stage-app-presente --timeout=120s
-
-  deploy-production:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: '${{ secrets.GOOGLE_CLOUD_KEYS }}'
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-      - name: Install gke-gcloud-auth-plugin
-        run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
-          gcloud components update --quiet
-          which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
-      - name: Configure kubectl
-        run: |
-          gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
-      - name: Deploy to production
-        run: |
-          kubectl -n production-app-presente apply -f production/frontend-deployment.yaml -f production/frontend-service.yaml
-          kubectl set image deployment/app-presente-front -n production-app-presente app-presente-front=guilherme310402/app_presente_front:latest
-          kubectl patch deployment app-presente-front -n production-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
-          kubectl rollout restart deployment/app-presente-front -n production-app-presente
-          kubectl rollout status deployment/app-presente-front -n production-app-presente --timeout=120s
