--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD para Frontend - App Presente
+name: CI/CD Frontend com SHA + Token GCP
 
 on:
   push:
@@ -6,73 +6,60 @@ on:
       - dev
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
+    env:
+      IMAGE_NAME: guilherme310402/app_presente_front
 
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Obter commit SHA
+      - name: Definir SHA
         id: vars
         run: echo "SHORT_SHA=$(git rev-parse --short=7 HEAD)" >> $GITHUB_OUTPUT
 
       - name: Login no Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Build e Push da imagem
+      - name: Build e Push da imagem com SHA
         run: |
-          docker build -t guilherme310402/app_presente_front:${{ steps.vars.outputs.SHORT_SHA }} .
-          docker push guilherme310402/app_presente_front:${{ steps.vars.outputs.SHORT_SHA }}
+          docker build -t $IMAGE_NAME:${{ steps.vars.outputs.SHORT_SHA }} .
+          docker push $IMAGE_NAME:${{ steps.vars.outputs.SHORT_SHA }}
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Get commit SHA
-        id: commit
-        run: echo "SHORT_SHA=$(git rev-parse --short=7 HEAD)" >> $GITHUB_OUTPUT
-
-      - name: Autenticar no Google Cloud
-        id: 'auth'
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GOOGLE_CLOUD_KEYS }}
-          project_id: app-chamada-5706
-
-      - name: Instalar SDK do GCP e kubectl
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: app-chamada-5706
-          install_components: 'kubectl'
-
-      - name: Instalar plugin de auth do GKE
+      - name: Instalar kubectl
         run: |
-          sudo curl -Lo /usr/local/bin/gke-gcloud-auth-plugin \
-            https://storage.googleapis.com/gke-release/gke-gcloud-auth-plugin/linux/amd64/gke-gcloud-auth-plugin
-          sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
-          echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
+          sudo apt-get update
+          sudo apt-get install -y kubectl
 
-      - name: Configurar acesso ao cluster GKE
+      - name: Configurar kubectl com token
+        env:
+          GKE_ENDPOINT: ${{ secrets.GKE_ENDPOINT }}
+          GCP_ACCESS_TOKEN: ${{ secrets.GCP_ACCESS_TOKEN }}
+          GKE_CA_BASE64: ${{ secrets.GKE_CA_BASE64 }}
         run: |
-          gcloud container clusters get-credentials devops-cluster \
-            --region us-central1 \
-            --project app-chamada-5706
+          mkdir -p ~/.kube
+          echo "$GKE_CA_BASE64" | base64 -d > ~/.kube/ca.crt
 
-      - name: Deploy no Kubernetes
+          kubectl config set-cluster gke-cluster \
+            --server=$GKE_ENDPOINT \
+            --certificate-authority=~/.kube/ca.crt
+
+          kubectl config set-credentials gke-user \
+            --token=$GCP_ACCESS_TOKEN
+
+          kubectl config set-context gke-context \
+            --cluster=gke-cluster \
+            --user=gke-user \
+            --namespace=stage-app-presente
+
+          kubectl config use-context gke-context
+
+      - name: Deploy para o GKE com imagem versionada
         run: |
-          kubectl set image deployment/app-presente-front -n stage-app-presente \
-            app-presente-front=guilherme310402/app_presente_front:${{ steps.commit.outputs.SHORT_SHA }}
-          
-          kubectl patch deployment app-presente-front -n stage-app-presente \
-            -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
-
+          kubectl -n stage-app-presente apply -f frontend-deployment.yaml -f frontend-service.yaml
+          kubectl set image deployment/app-presente-front -n stage-app-presente app-presente-front=$IMAGE_NAME:${{ steps.vars.outputs.SHORT_SHA }}
+          kubectl patch deployment app-presente-front -n stage-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
           kubectl rollout restart deployment/app-presente-front -n stage-app-presente
           kubectl rollout status deployment/app-presente-front -n stage-app-presente --timeout=120s
