--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,11 +40,11 @@ jobs:
           GKE_CA_BASE64: ${{ secrets.GKE_CA_BASE64 }}
         run: |
           mkdir -p ~/.kube
-          echo "$GKE_CA_BASE64" | base64 -d > ~/.kube/ca.crt
+          echo "$GKE_CA_BASE64" | base64 -d > $HOME/.kube/ca.crt
 
           kubectl config set-cluster gke-cluster \
             --server=$GKE_ENDPOINT \
-            --certificate-authority=~/.kube/ca.crt
+            --certificate-authority=$HOME/.kube/ca.crt
 
           kubectl config set-credentials gke-user \
             --token=$GCP_ACCESS_TOKEN
